--- a/literature/theory/reference.bib
+++ b/literature/theory/reference.bib
@@ -364,3 +364,13 @@
   year      = {2013},
   publisher = {Springer}
 }
+@article{bernanke1995inside,
+  title     = {Inside the black box: the credit channel of monetary policy transmission},
+  author    = {Bernanke, Ben S and Gertler, Mark},
+  journal   = {Journal of Economic perspectives},
+  volume    = {9},
+  number    = {4},
+  pages     = {27--48},
+  year      = {1995},
+  publisher = {American Economic Association}
+}
